--- a/templates/sbnext-finalium/components/player_2013.twig
+++ b/templates/sbnext-finalium/components/player_2013.twig
@@ -1,4 +1,5 @@
-         <div id="container">
+<link id="css-4047501374" class="www-embed-player" rel="stylesheet" href="/assets/css/player.css" type="text/css">	  
+		 <div id="container">
             <!--- todo: redo "video processed" message to use _error.twig -gr 7/22/2021 --->
             {% if (video.flags b-and 2) %}
             <div style="background-color: black; color: white; text-align: center; padding: 15rem">
