--- a/templates/sbnext-finalium/_layout.twig
+++ b/templates/sbnext-finalium/_layout.twig
@@ -2,15 +2,15 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>{% block title %}{% endblock %} - squareBracket Next</title>
+	<title>{% block title %}{% endblock %} - cheeseRox Next</title>
 	{% block head %}{% endblock %}
 	<link rel="apple-touch-icon" sizes="180x180" href="/assets/icons/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="/assets/icons/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="/assets/icons/favicon-16x16.png">
 	<link rel="manifest" href="/assets/icons/site.webmanifest">
 	<link rel="shortcut icon" href="/assets/icons/favicon.ico">
-	<meta name="apple-mobile-web-app-title" content="squareBracket">
-	<meta name="application-name" content="squareBracket">
+	<meta name="apple-mobile-web-app-title" content="cheeseRox">
+	<meta name="application-name" content="cheeseRox">
 	<meta name="msapplication-TileColor" content="#2b5797">
 	<meta name="msapplication-config" content="/assets/icons/browserconfig.xml">
 	<meta name="theme-color" content="#4723d9">
@@ -66,7 +66,7 @@
 			Todo: add something.
 			</div>
 			<div class="col-md-1">
-			<h4 style="margin:10px 0">squareBracket</h4>
+			<h4 style="margin:10px 0">cheeseRox</h4>
 			<ul style="padding:0">
 			</ul>
 			</div>
@@ -123,9 +123,9 @@
 	</div>
 	<footer class="container">
 		<div class="footer">
-			<h3>squareBracket Beta 2.0.4</h3>
-			<p><b>{{ __("By the squareBracket contributors") }}</b> · 2020-{{ 'now' | date('Y') }} | <b>{{ __("Users registered") }}</b>: {{ stats.usercount }} | <b>{{ __("Videos uploaded") }}</b>: {{ stats.videocount }}</p>
-			<h5>{{ __("Git Commit") }} <a href="https://github.com/gr-sb/squarebracket/commit/{{ git_commit(false) }}">{{ git_commit() }}</a><br></h5>
+			<h3>cheeseRox</h3>
+			<p><b>{{ __("By the cheeseRox contributors") }}</b> · 2020-{{ 'now' | date('Y') }} | <b>{{ __("Users registered") }}</b>: {{ stats.usercount }} | <b>{{ __("Videos uploaded") }}</b>: {{ stats.videocount }}</p>
+			<h5>{{ __("Git Commit") }} {{ git_commit() }}<br></h5>
 			<a id="dark" href="#" {% if theme == 'dark' %}hidden{% endif %}>{{ __("Enable dark mode") }}</a><a id="light" href="#" {% if theme == 'default' %}hidden{% endif %}>{{ __("Disable dark mode") }}</a>
 		</div>
 	</footer>
