--- a/templates/sbnext-finalium/index.twig
+++ b/templates/sbnext-finalium/index.twig
@@ -1,9 +1,9 @@
 {% extends "_layout.twig" %}
 {% block head %}
-<meta name="title" content="squareBracket">
+<meta name="title" content="cheeseRox">
 <meta name="description" content="Unbelivable, This is not PokTube.">
-<meta property="og:site_name" content="squareBracket"/>
-<meta property="og:title" content="squareBracket">
+<meta property="og:site_name" content="cheeseRox"/>
+<meta property="og:title" content="cheeseRox">
 <meta property="og:description" content="Unbelivable, This is not PokTube.">
 <meta property="og:image" content="{{ domain }}assets/logo_square_icon.png">
 <meta property="og:url" content="{{ page_url }}">
@@ -37,7 +37,7 @@
 		{% else %}
 		<div class="grid">
 			<div class="col-md-8">
-				<h1 style="padding:0;margin:8px 0;">{{ __("Welcome to squareBracket") }}</h1>
+				<h1 style="padding:0;margin:8px 0;">{{ __("Welcome to cheeseRox") }}</h1>
 				<h3 style="padding:0;margin:0;">{{ __("Unbelivable, This is not PokTube.") }}</h3>
 			</div>
 			<div class="col-md-4">
@@ -71,7 +71,7 @@
 	</div>
 		<div class="card">
 			<div class="card-body-fat">
-				<h3>{{ __("squareBracket Videos") }}</h3>
+				<h3>{{ __("cheeseRox Videos") }}</h3>
 				{% for video in videos %}
 				{{ small_video_box(video) }}
 				{% else %}
@@ -82,7 +82,7 @@
 	</div>
 	<div class="col-md-4">
 		<h3>{{ __("What's new?") }}</h3>
-		<p>{{ __("Welcome to the brand new squareBracket! We've heard it, the old layout sucked, so we have redesigned squareBracket to have a better user interface.") }}</p>
+		<p>{{ __("Welcome to the brand new cheeseRox! We've heard it, the old layout sucked, so we have redesigned cheeseRox to have a better user interface.") }}</p>
 	</div>
 </div>
 <br><br>
