add channels list

--- a/templates/sbnext-finalium/watch.twig
+++ b/templates/sbnext-finalium/watch.twig
@@ -68,11 +68,13 @@
             <div class="grid" style="margin-top:5px;">
                <div class="col-md-4">
                   <div style="margin-top:-9px;">
-                     <button href="#" id="{% if log %}like{% else %}action_unlogged{% endif %}" class="button button-secondary-invis">
+                     <button href="#" id="{% if log %}like{% else %}action_unlogged{% endif %}"
+					 class="button {% if rating == 1 %}button-success{% else %}button-secondary-invis{% endif %}">
                      {{ icon("hand-thumbs-up-fill", 20) }}
                      {{ __("Like") }}
                      </button>
-                     <button href="#" id="{% if log %}dislike{% else %}action_unlogged{% endif %}" data-tooltip="Dislike" class="button button-secondary-invis">
+                     <button href="#" id="{% if log %}dislike{% else %}action_unlogged{% endif %}" 
+					 class="button {% if rating == 0 %}button-danger{% else %}button-secondary-invis{% endif %}">
                      {{ icon("hand-thumbs-down-fill", 20) }}
                      </button>
                   </div>
