--- a/templates/sbnext-finalium/channels.twig
+++ b/templates/sbnext-finalium/channels.twig
@@ -7,7 +7,7 @@
         <div class="col-md-1">
             <div class="memberBoxList">
                 <div class="user-thumb-large">
-                    <a href="/profile.php?name={{ cell.name }}"><img src="{{ profile_image(cell.name) }}" class="img-fluid rounded" alt="{{ cell.name }}"></a>
+                    <a href="/user.php?name={{ cell.name }}"><img src="{{ profile_image(cell.name) }}" class="img-fluid rounded" alt="{{ cell.name }}"></a>
                 </div>
             </div>
             <div class="vldescbox">
