--- a/templates/sbnext-finalium/_layout.twig
+++ b/templates/sbnext-finalium/_layout.twig
@@ -94,7 +94,7 @@
 		</div>
 	</div>
 	{% block precontent %}{% endblock %}
-	<div class="container">
+	<div class="container" style="min-height: 400px;">
 		<div class="grid">
 			<div class="col-md-2">
 				<div class="guide-channels-list">
