--- a/templates/sbnext-finalium/_layout.twig
+++ b/templates/sbnext-finalium/_layout.twig
@@ -119,7 +119,7 @@
 	</div>
 	{% endif %}
 	{% block precontent %}{% endblock %}
-	{% if not theme == 'bluey' %}
+	{% if theme != 'bluey' %}
 		<div class="container" style="min-height: 400px;">
 		<div class="grid">
 			<div class="col-md-2">
@@ -142,10 +142,10 @@
 			</div>
 			<div class="col-md-10">
 		{% endif %}
-				<div class="container" {% if not theme == 'bluey' %}style="margin-left: 0; padding: 0 70px 0 0;"{% else %}style="max-width: 970px;"{% endif %}>
+				<div class="container" {% if theme != 'bluey' %}style="margin-left: 0; padding: 0 70px 0 0;"{% else %}style="max-width: 970px;"{% endif %}>
 					{% block content %}{% endblock %}
 					</div>
-					{% if not theme == 'bluey' %}
+					{% if theme != 'bluey' %}
 			</div>
 		</div>
 	</div>
