--- a/templates/sbnext-finalium/settings.twig
+++ b/templates/sbnext-finalium/settings.twig
@@ -65,6 +65,16 @@
 			</select>
 		</td>
 	</tr>
+	<tr>
+		<td class="a">{{ __("sbNext Theme") }}</td>
+		<td class="b">
+			<select class="form-select" name="theme">
+					<option value="default">Light</option>
+					<option value="dark">Dark</option>
+					<option value="bluey">Bluey</option>
+			</select>
+		</td>
+	</tr>
 </table>
 <input type="hidden" name="magic" value="FOR GOD SAKES OPEN THE SILO DOOR">
 <div class="right">
