--- a/templates/sbnext-finalium/components/videobox.twig
+++ b/templates/sbnext-finalium/components/videobox.twig
@@ -9,8 +9,13 @@
 				</div>
 				<div class="col-md-12">
 				<h3><a href="watch.php?v={{ data.video_id }}">{{ data.title }}</a></h3>
-				<p style="line-height:1;">{{ userlink(data, 'u_') }}<br> {{ data.views }} {{ __("views") }}	&bull;
-				<span class="text-muted">{{ data.time | relative_time }}</span> &bull; {{ data.category_id | category_id_to_name() }}</p>
+					<div class="col-md-2" style="padding-left:0;">
+					<img class="rounded img-fluid" src="{{ profile_image(data.u_name) }}"  alt="{{ data.u_name }}">
+					</div>
+					<div class="col-md-10">
+						<p style="line-height:1;margin:0;">{{ userlink(data, 'u_') }}<br> {{ data.views }} {{ __("views") }}	&bull;
+						<span class="text-muted">{{ data.time | relative_time }}</span> &bull; {{ data.category_id | category_id_to_name() }}</p>
+					</div>
 				</div>
 		</div>
 	</div>
