rename bluey theme to katt theme for legal reasons

--- a/templates/sbnext-finalium/settings.twig
+++ b/templates/sbnext-finalium/settings.twig
@@ -71,7 +71,7 @@
 			<select class="form-select" name="theme">
 					<option value="default">Light</option>
 					<option value="dark">Dark</option>
-					<option value="bluey">Bluey</option>
+					<option value="bluey">Katt</option>
 			</select>
 		</td>
 	</tr>
