--- a/templates/sbnext-finalium/_layout.twig
+++ b/templates/sbnext-finalium/_layout.twig
@@ -154,7 +154,7 @@
 	</div>
 	{% endif %}
 	{% block precontent %}{% endblock %}
-				<div class="container" style="max-width: 970px;">
+				<div class="container" style="max-width: 970px;padding:0;">
 					{% block content %}{% endblock %}
 					</div>
 	{% if theme == 'bluey' %}
