query views for channel layouts

--- a/templates/sbnext-finalium/user-2012.twig
+++ b/templates/sbnext-finalium/user-2012.twig
@@ -60,7 +60,7 @@
 														<span class="stat-name">followers</span>
 													</div>
 													<div class="stat-entry">
-														<span class="stat-value">Fuck</span>
+														<span class="stat-value">{{ views }}</span>
 														<span class="stat-name">video views</span>
 													</div>
 												</div>
