--- a/templates/sbnext-finalium/watch.twig
+++ b/templates/sbnext-finalium/watch.twig
@@ -132,9 +132,13 @@
          </div>
       </div>
       <div class="col-md-4">
-         {% for related_video in related_videos %}
-         {{ small_video_box(related_video)}}
-         {% endfor %}
+	  <div class="card">
+		  <div class="card-body">
+			 {% for related_video in related_videos %}
+			 {{ small_video_box(related_video)}}
+			 {% endfor %}
+		  </div>
+	  </div>
          <div class="card">
             <div class="card-header" id="fromUser">
                <h5>{{ __("More videos from %s", [video.u_name]) }}</h5>
