redo ajax_watch.php

--- a/assets/scss/darkmode.scss
+++ b/assets/scss/darkmode.scss
@@ -28,14 +28,13 @@ body {
 	color: white;
 }
 
-#masthead-container {
-    background: $gray-900;
-    border-bottom: 1px solid #000;
+#masthead a {
+  color: white;
 }
 
 .card {
     border: 1px solid #2e2e2e;
-    background-color: #000;
+    background-color: #131313;
 }
 
 .card-header {
