--- a/templates/sbnext-finalium/watch.twig
+++ b/templates/sbnext-finalium/watch.twig
@@ -137,15 +137,15 @@
 			 {% for related_video in related_videos %}
 			 {{ small_video_box(related_video)}}
 			 {% endfor %}
+			 <div class="center">
+					  <div class="button button-secondary" id="fromUser">
+						{{ __("More videos") }}
+					  </div>
+			</div>
+					<div class="card-body collapsed" id="fromUserVideoList">
+				</div>
+			  </div>
 		  </div>
-	  </div>
-         <div class="card">
-            <div class="card-header" id="fromUser">
-               <h5>{{ __("More videos from %s", [video.u_name]) }}</h5>
-            </div>
-            <div class="card-body collapsed" id="fromUserVideoList">
-            </div>
-         </div>
       </div>
    </div>
 </div>
