--- a/assets/scss/bluey.scss
+++ b/assets/scss/bluey.scss
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 
+@import "_variables";
+@import "_gradients";
+
 $teal: #468aca;
 $red: #f86468;
 $white: #FCFCFC;
@@ -30,9 +33,40 @@ $gray-800: #393939;
 $gray-850: #333333;
 $gray-900: #242424;
 
+
+$primary:       $blue;
+$secondary:     $gray-100;
+$success:       $green;
+$info:          $cyan;
+$warning:       $yellow;
+$danger:        $red;
+$gray-dark: 	$gray-800;
+$neutral:       $gray-100;
+$indigo-color:	$indigo;
+$teal-color:	$teal;
+$aqua-color:	$aqua;
+$orange-color:	$orange;
+
+$theme-colors: (
+  "primary":    $primary,
+  "secondary":  $gray-200,
+  "success":    $success,
+  "info":       $info,
+  "warning":    $warning,
+  "danger":     $danger,
+  "neutral":    $gray-100,
+  "violet":     $indigo-color,
+  "blue-green": $teal-color,
+  "aqua": $aqua-color,
+  "carrot": $orange-color,
+);
+
+@import "_buttons";
+@import "_backgrounds";
+
 html {
   text-rendering: optimizeLegibility;
-  }
+}
 
 @font-face {
   font-family: OneTrickPony;
