--- a/templates/sbnext-finalium/watch.twig
+++ b/templates/sbnext-finalium/watch.twig
@@ -89,24 +89,38 @@
                </div>
             </div>
          </div>
-         <div class="card card-body-fat">
-            <div id="About" class="tabcontent" style="display: block;">
-               <p><b>{{ __("Published on %s", [video.time | date('M j, Y')]) }}</b></p>
-               <p>{{ video.description }}</p>
-               <div class="description-extra">
-                  <ul>
-                     <li>
-                        <h4 class="title">{{ __("Category:") }}</h4>
-                        <div class="content">{{ video.category_id | category_id_to_name() }}</div>
-                     </li>
-                     <li>
-                        <h4 class="title">{{ __("License:") }}</h4>
-                        <div class="content">{{ __("Standard cheeseRox License") }}</div>
-                     </li>
-                  </ul>
-               </div>
-            </div>
-         </div>
+		<div class="card card-body-fat">
+			<div class="grid">
+				 <div class="col-md-8">
+					<div id="About" class="tabcontent" style="display: block;">
+					   <p><b>{{ __("Published on %s", [video.time | date('M j, Y')]) }}</b></p>
+					   <p>{{ video.description }}</p>
+					   <div class="description-extra">
+						  <ul>
+							 <li>
+								<h4 class="title">{{ __("Category:") }}</h4>
+								<div class="content">{{ video.category_id | category_id_to_name() }}</div>
+							 </li>
+							 <li>
+								<h4 class="title">{{ __("License:") }}</h4>
+								<div class="content">{{ __("Standard cheeseRox License") }}</div>
+							 </li>
+						  </ul>
+					   </div>
+					</div>
+				 </div>
+				 <div class="col-md-4">
+					 <div class="col-md-4">
+						<img class="img-fluid" src="/assets/series_placeholder.png">
+					 </div>
+					 <div class="col-md-8">
+					 <b>Katt</b><br>
+					 Season 1<br>
+					 Episode 1<br>
+					 </div>
+				 </div>
+			 </div>
+		 </div>
          <div class="card">
             <div class="card-body-fat">
                <h3>Comments ({{ comCount }})</h3>
