--- a/templates/sbnext-finalium/upload-debug.twig
+++ b/templates/sbnext-finalium/upload-debug.twig
@@ -23,6 +23,8 @@
 						<input type="text" class="form-control form-long uploader-form" name="tags">
 						<h4 style="margin-bottom: 0.5em;">{{ __(" Video ID") }}</h4>
 						<input type="text" class="form-control form-long uploader-form" name="debugID">
+						<h4 style="margin-bottom: 0.5em;">{{ __(" Uploader ID") }}</h4>
+						<input type="text" class="form-control form-long uploader-form" name="uploaderID">
 						<h2 style="margin-bottom: 0.5em;">{{ __("Video file") }}</h2>
 						<p>{{ __("Select the video file you want to upload.") }}</p>
 						<input class="form-control" type="file" name="fileToUpload" id="fileToUpload" required>
