--- a/templates/sbnext-finalium/browse.twig
+++ b/templates/sbnext-finalium/browse.twig
@@ -4,6 +4,18 @@
 
 	{% block content %}
 <h1>{{ title }}</h1>
+	<div class="col-md-12">
+         <div class="bg-dark text-light card card-body" style="padding:1px 15px;">
+            <div class="grid">
+				<p>
+					<a>Videos</a> &bull;
+					<a>Music</a> &bull;
+					<a>Images</a> &bull;
+					<a>Text</a>
+				</p>
+            </div>
+         </div>
+	</div>
 <div class="grid">
 	<div class="col-md-4">
 		<div class="card card-body-fat sidebar-nav">
