--- a/templates/sbnext-finalium/browse.twig
+++ b/templates/sbnext-finalium/browse.twig
@@ -37,7 +37,12 @@
 		{% for level in levels %}
 			{{ small_video_box(level) }}
 		{% else %}
-			{{ __("There are no videos of that category. You could create one!") }}
+		<div class="bg-dark" style="max-width:700px;margin:auto;padding:20px;padding-bottom:100px;color:white;">
+			<h2>{{ __("There are no videos of that category.") }}</h2>
+			<hr>
+			<p>{{ __("You could create one!") }}</p>
+			<div style="text-align:center;margin:auto"><img src="../assets/logo_monochrome.png" style="max-width:150px;"></div>
+		</div>
 		{% endfor %}
 
 		{% if type == 'all' %}
