--- a/templates/sbnext-finalium/_layout.twig
+++ b/templates/sbnext-finalium/_layout.twig
@@ -107,6 +107,7 @@
 				<div id="masthead-upload-button-group" style="display: flex;justify-content: center;align-items: center;gap: 5px;margin-top: 5px;">
 					<a href="/browse.php">{{ __("Browse") }}</a>
 					<a href="/upload_start.php">{{ __("Upload") }}</a>
+					<a href="/forum/">{{ __("Forums") }}</a>
 				</div>
 				<form id="masthead-search" action="/results.php">
 					<button id="search-btn" class="button button-secondary">
