--- a/assets/2012/css/www-channels3-vfl-wJB5W.css
+++ b/assets/2012/css/www-channels3-vfl-wJB5W.css
@@ -190,7 +190,7 @@
 #branded-page-body,
 #iframe-wide-body {
     overflow: hidden;
-    margin: 0 auto 50px auto;
+    margin: 0 auto 50px;
     width: 970px;
     text-align: left
 }
@@ -438,7 +438,7 @@
     position: relative;
     overflow: hidden;
     background: none;
-    padding: 10px 0 0 0
+    padding: 10px 0 0
 }
 
 .channel-activity-feeds .feed-v1 .feed-item-sub-items .feed-item-visual {
@@ -675,7 +675,7 @@
 }
 
 .channel-filtered-page .channel-filtered-content .yt-uix-pager {
-    margin: 30px 0 2px 0
+    margin: 30px 0 2px
 }
 
 .channel-filtered-page .channel-videos-list {
@@ -789,7 +789,7 @@
 }
 
 .channel-filtered-page .no-videos-message {
-    margin: 30px 0 10px 0;
+    margin: 30px 0 10px;
     text-align: center;
     color: #999;
     font-size: 16px
@@ -882,7 +882,7 @@
 }
 
 #channel-header-main .upper-left-section.has-secondary-title {
-    padding: 6px 0 0 0;
+    padding: 6px 0 0;
     display: inline-block;
     *display: inline;
     *zoom: 1
@@ -914,10 +914,10 @@
     outline: none;
     color: #fff;
     float: left;
-    -moz-box-shadow: inset 0px 2px 3px #151515;
-    -ms-box-shadow: inset 0px 2px 3px #151515;
-    -webkit-box-shadow: inset 0px 2px 3px #151515;
-    box-shadow: inset 0px 2px 3px #151515;
+    -moz-box-shadow: inset 0 2px 3px #151515;
+    -ms-box-shadow: inset 0 2px 3px #151515;
+    -webkit-box-shadow: inset 0 2px 3px #151515;
+    box-shadow: inset 0 2px 3px #151515;
     -moz-border-radius: 3px 0 0 3px;
     -webkit-border-radius: 3px 0 0 3px;
     border-radius: 3px 0 0 3px
@@ -1071,7 +1071,7 @@
 }
 
 .channel-section-heading {
-    margin: 0 0 8px 0;
+    margin: 0 0 8px;
     padding-top: 8px
 }
 
@@ -1085,7 +1085,7 @@
 }
 
 .channel-notification {
-    margin: 20px auto 5px auto
+    margin: 20px auto 5px
 }
 
 .channel-notification button {
@@ -1172,12 +1172,12 @@
 .channel-horizontal-menu li a:active,
 .channel-horizontal-menu li a:focus {
     background: #333;
-    text-shadow: 0px -1px 1px rgb(0, 0, 0);
+    text-shadow: 0 -1px 1px rgb(0, 0, 0);
     color: #ccc;
-    -moz-box-shadow: 0px 2px 5px #151515;
-    -ms-box-shadow: 0px 2px 5px #151515;
-    -webkit-box-shadow: 0px 2px 5px #151515;
-    box-shadow: 0px 2px 5px #151515
+    -moz-box-shadow: 0 2px 5px #151515;
+    -ms-box-shadow: 0 2px 5px #151515;
+    -webkit-box-shadow: 0 2px 5px #151515;
+    box-shadow: 0 2px 5px #151515
 }
 
 .channel-horizontal-menu li.selected a {
@@ -1245,7 +1245,7 @@
 
 .primary-pane .iframe-module {
     padding: 0;
-    margin: 8px 8px 0 8px
+    margin: 8px 8px 0
 }
 
 .primary-pane .iframe-module.iframe-wide {
@@ -2259,7 +2259,7 @@ li.channel-summary-list-item {
 }
 
 .channel-summary-full .channel-summary-thumb {
-    margin: 0 auto 5px auto;
+    margin: 0 auto 5px;
     width: 176px
 }
 
@@ -2340,7 +2340,7 @@ a.see-more-link img {
 }
 
 .playlists-wide h3 {
-    margin: 0 0 2px 0;
+    margin: 0 0 2px;
     overflow: hidden;
     white-space: nowrap;
     word-wrap: normal;
@@ -2484,7 +2484,7 @@ a.see-more-link img {
 
 .single-playlist .thumb-container {
     display: block;
-    margin: 0 0 10px 0
+    margin: 0 0 10px
 }
 
 .single-playlist .playlist-info {
@@ -2697,7 +2697,7 @@ a.see-more-link img {
     font-size: 16px;
     font-weight: normal;
     color: #333;
-    margin: 0 0 10px 0
+    margin: 0 0 10px
 }
 
 .profile-view-module a {
@@ -2962,7 +2962,7 @@ a.see-more-link img {
 
 .subscription-list-recommended-channels {
     overflow: hidden;
-    padding: 10px 0 0 0
+    padding: 10px 0 0
 }
 
 .subscription-menu-expandable-channels3 .close {
@@ -3073,7 +3073,7 @@ a.see-more-link img {
 }
 
 .yt-c3-shelf-editor-item {
-    margin-left: 0px
+    margin-left: 0
 }
 
 .yt-c3-shelf-editor-item .shelf-content-item {
@@ -3200,7 +3200,7 @@ a.see-more-link img {
 
 .featured-offers-view .featured-offer-metadata {
     float: left;
-    margin: 10px 0px 2px 10px;
+    margin: 10px 0 2px 10px;
     width: 160px
 }
 
@@ -3303,7 +3303,7 @@ a.see-more-link img {
 #store-editor {
     float: left;
     margin-top: 20px;
-    padding: 0px;
+    padding: 0;
     width: 770px;
     background: #f3f3f3
 }
@@ -3353,7 +3353,7 @@ a.see-more-link img {
 }
 
 .store-editor .featured-inner-editor {
-    margin: 20px 6px 6px 6px;
+    margin: 20px 6px 6px;
     padding: 10px;
     overflow: hidden;
     -moz-box-shadow: 0 1px 2px #ccc;
@@ -3407,7 +3407,7 @@ a.see-more-link img {
 }
 
 .store-view .channel-filtered-page-head {
-    margin-left: 0px
+    margin-left: 0
 }
 
 .store-view .channel-store-filtered-content {
@@ -3716,7 +3716,7 @@ a.see-more-link img {
 .store-display-offer-container {
     float: left;
     margin: 0 10px 10px 0;
-    padding: 7px 7px 10px 7px;
+    padding: 7px 7px 10px;
     width: 160px;
     height: 324px;
     background-color: #fff;
@@ -3736,7 +3736,7 @@ a.see-more-link img {
 }
 
 .store-display-offer-buy-container {
-    padding: 5px 5px 0 5px;
+    padding: 5px 5px 0;
     vertical-align: top
 }
 
@@ -4597,7 +4597,7 @@ a:hover .playlist-thumb-strip .hover-overlay,
 .feed-item-main .feed-item-show-more {
     position: absolute;
     bottom: 3px;
-    right: 0px
+    right: 0
 }
 
 .feed-item-main .feed-item-show-more .yt-uix-button {
@@ -4896,7 +4896,7 @@ a:hover .playlist-thumb-strip .hover-overlay,
 }
 
 .playlist-summary {
-    margin: 0 auto 10px auto;
+    margin: 0 auto 10px;
     width: 210px
 }
 
